--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
 </head>
 <body>
 
-<script type="text/javascript" src="dist/bundle.js"></script>
+<script type="text/javascript" src="dist/js/bundle.js"></script>
 </body>
 </html>
